- 国際化に関する変更
-- デフォルトのタイムゾーンとして、date.timezone を 'Asia/Tokyo' に設定
-- Ethna_I18N クラス に setTimeZone メソッドを追加 (static呼出)
- Ethna_MailSender にて、メール送信に問題がある場合の設定として 'mail_func_workaround' を追加
-- この値を true に設定すると、メールヘッダの改行コードを一律 CRLF にする処理を回避する
-- $mail = new Ethna_MailSender(); $mail->setOption(array('mail_func_workaround')); でも設定可能
- Smarty の設定（現在はデリミタのみ）を [appid]-ini.php に書くことが出来るようにした

*** bug fix

- Ethna_Controller#getTemplatedir を無視してテンプレートディレクトリを決定していたバグを修正(thanks: hiko)
-- getTemplatedirメソッドをオーバライドしても強制的にロケールが付加されていた
-- https://sourceforge.jp/ticket/browse.php?group_id=1343&tid=15570
- "ethna pear-local list -a" の実行結果がエラーになってしまうバグを修正
-- https://sourceforge.jp/ticket/browse.php?group_id=1343&tid=15760
- safe-mode が ON の際に、CacheManager_Localfile がディレクトリを生成できないので、tmp ディレクトリ直下にキャッシュファイルを作成するようにした
-- skel/skel.app_manager.php も修正
- APPID-ini.php が存在しない場合，またはURLが設定にない場合，デフォルトURLが HTTP_HOST で設定されていたが，末尾に / がなかったので修正
- フォームヘルパで自動的に出力されるhiddenタグの閉じ忘れを修正(thanks: id:syachi5150)
- ethna add-app-manager コマンドで生成されるファイル名およびクラス名が間違っていたバグを修正(thanks: id:syachi5150)
-- https://sourceforge.jp/ticket/browse.php?group_id=1343&tid=16137
- Validatorが出力するメッセージからフォーム名の後ろのスペースを削るように修正。(thanks: id:syachi5150)
-- https://sourceforge.jp/ticket/browse.php?group_id=1343&tid=16336
- Smarty 拡張プラグインの wordwrap_i18n にアルファベットのみを渡した場合に正しい結果が返らないバグを修正
-- 末尾のスペースを取り除く挙動も wordwrap に合わせて削除
-- http://sourceforge.jp/ticket/browse.php?group_id=1343&tid=16839
- ethna add-test コマンドのヘルプが機能していなかったバグを修正
- iniディレクティブ date.timezone が設定されてないために、E_WARNING が PHP 5.3.0 で出ていたバグを修正
- 存在しない(or 削除された) ethnaコマンドを指定すると Fatal Error が起きるバグを修正 (thanks:kondo_)
-- http://sourceforge.jp/ticket/browse.php?group_id=1343&tid=17894
- Ethna_Plugin_Logwriter の debug_backtrace の一部が取得できず、E_NOTICE が出るバグを修正 (thanks: http://www.remix.gr.jp/)
- cli 環境で Ethna_Session::start を叩いたときに $_SERVER 変数がないために E_NOTICE が出る問題を修正
- PHP 5.3.0 で新設された E_DEPRECATED を ON にすると Fatal Error が起きるバグを修正 (#18418)
- Smartyのデリミタを変更している場合にi18nコマンドが機能しないバグを修正 (#18668)
